@@ -3,6 +3,7 @@
 -add mouse get_focused method.
 -revise surface methods for vector arg.
 -add display resize method.
+-revise canvas initialization.
 
 0.27    2025-01-18
 -revise to permit import in python.
